--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,19 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "components/*": ["components/*"],
+      "theme": ["theme"],
+      "shared/*": ["shared/*"],
+      "assets/*": ["assets/*"],
+      "graphql/*": ["graphql/*"],
+      "stores/*": ["stores/*"],
+    }
   },
   "include": [
     "src"
-  ]
+  ],
+
 }
