--- a/package.json
+++ b/package.json
@@ -5,14 +5,25 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@types/node": "^18.11.9",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/validator": "^13.7.10",
+    "classnames": "^2.3.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4"
+    "react-use": "^17.4.0",
+    "reset-css": "^5.0.1",
+    "typescript": "^4.8.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
@@ -24,6 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "prepare": "husky install"
   },
   "lint-staged": {
