--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,16 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
+
 
 events {
     worker_connections  1024;
 }
 
+
 http {
-    resolver 8.8.8.8;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -24,30 +25,7 @@ http {
 
     keepalive_timeout  65;
 
-    gzip  on;
+    #gzip  on;
 
-    server {
-        listen       80;
-        server_name  *.skyrealm.ai;
-
-        location / {
-            root   /usr/share/nginx/html;
-            index  organizer.html;
-            if ($request_filename ~ \.html) {
-                add_header Cache-Control "max-age=0";
-                add_header Strict-Transport-Security "max-age=31536000";
-                add_header X-Content-Type-Options "nosniff";
-                add_header Content-Security-Policy "default-src * data: blob: about: ws: wss: 'unsafe-inline' 'unsafe-eval'; script-src * data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src * data: blob: 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src * data: blob: ; style-src * data: blob: 'unsafe-inline';font-src * data: blob: 'unsafe-inline'; frame-ancestors * data: blob: 'unsafe-inline';";
-                add_header Referrer-Policy "same-origin";
-            }
-        }
-
-        #error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-
-        # error_page   500 502 503 504  /50x.html;
-        # location = /50x.html {
-            # root   /usr/share/nginx/html;
-        # }
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
