--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
+    "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.14",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/node": "^18.11.9",
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.10",
+    "apollo-upload-client": "^17.0.0",
+    "apollo-utilities": "^1.3.4",
     "classnames": "^2.3.2",
+    "graphql-tag": "^2.12.6",
+    "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.3",
@@ -22,7 +30,9 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "reset-css": "^5.0.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
