--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.10.14",
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.14",
@@ -21,11 +23,14 @@
     "classnames": "^2.3.2",
     "graphql-tag": "^2.12.6",
     "http-proxy-middleware": "^2.0.6",
+    "formik": "^2.2.9",
+    "graphql-request": "^5.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
@@ -36,6 +41,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.50.5",
     "eslint": "^8.28.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
@@ -49,7 +55,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "eslint --fix"
+    "*.{ts,tsx,js,jsx,css,scss,md}": "prettier --write"
   },
   "browserslist": {
     "production": [
