--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
-    "paths": {
-      "components/*": ["components/*"],
-      "theme": ["theme"],
-      "shared/*": ["shared/*"],
-      "assets/*": ["assets/*"],
-      "graphql/*": ["graphql/*"],
-      "stores/*": ["stores/*"],
-    }
+    "typeRoots": [
+      "node_modules/@types"
+    ],
   },
   "include": [
     "src"
