--- a/package.json
+++ b/package.json
@@ -6,31 +6,19 @@
     "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@faker-js/faker": "^7.6.0",
-    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.10.14",
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.14",
-    "@types/apollo-upload-client": "^17.0.2",
-    "@types/node": "^18.11.9",
-    "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.10",
+    "@react-google-maps/api": "^2.17.0",
     "apollo-upload-client": "^17.0.0",
     "apollo-utilities": "^1.3.4",
     "classnames": "^2.3.2",
-    "graphql-tag": "^2.12.6",
-    "http-proxy-middleware": "^2.0.6",
     "formik": "^2.2.9",
-    "graphql-request": "^5.0.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
@@ -41,18 +29,33 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.50.5",
+    "@graphql-codegen/cli": "2.14.1",
+    "@graphql-codegen/client-preset": "1.1.5",
+    "@graphql-codegen/typescript": "^2.8.2",
+    "@types/apollo-upload-client": "^17.0.2",
+    "@types/dotenv-flow": "^3.2.0",
+    "@types/node": "^18.11.9",
+    "@types/node-sass": "^4.11.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.10",
+    "dotenv-flow": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel codegen dev",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "codegen": "graphql-codegen",
+    "codegen:watch": "graphql-codegen -w"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,scss,md}": "prettier --write"
