--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.14.1",
