--- a/package.json
+++ b/package.json
@@ -3,44 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.14",
-    "@mui/lab": "^5.0.0-alpha.109",
-    "@mui/material": "^5.10.14",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
-    "apollo-upload-client": "^17.0.0",
-    "apollo-utilities": "^1.3.4",
-    "classnames": "^2.3.2",
     "formik": "^2.2.9",
-    "mobx": "^6.7.0",
-    "mobx-react-lite": "^3.4.0",
-    "node-sass": "^7.0.3",
+    "graphql-request": "^5.0.0",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
-    "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.8.4",
-    "uuid": "^9.0.0",
-    "validator": "^13.7.0",
     "web-vitals": "^3.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.14.1",
-    "@graphql-codegen/client-preset": "1.1.5",
-    "@graphql-codegen/typescript": "^2.8.2",
-    "@types/apollo-upload-client": "^17.0.2",
+    "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/client-preset": "^1.2.1",
+    "@graphql-codegen/typescript": "^2.8.3",
     "@types/dotenv-flow": "^3.2.0",
-    "@types/node": "^18.11.9",
-    "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.25",
+    "@types/node": "^18.11.10",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.10",
     "dotenv-flow": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -51,7 +40,7 @@
     "serve": "^14.1.2"
   },
   "scripts": {
-    "start": "npm-run-all --parallel codegen dev",
+    "start": "npm-run-all --parallel codegen:watch dev",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -61,7 +50,7 @@
     "serve": "serve -s build"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx,css,scss,md}": "prettier --write"
+    "*.{ts,tsx,js,jsx,css,md}": "prettier --write"
   },
   "eslintConfig": {
     "extends": [
