--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
+    "autosuggest-highlight": "^3.3.4",
     "formik": "^2.2.9",
     "graphql-request": "^5.0.0",
     "notistack": "^2.0.8",
@@ -26,6 +27,7 @@
     "@graphql-codegen/cli": "^2.15.0",
     "@graphql-codegen/client-preset": "^1.2.1",
     "@graphql-codegen/typescript": "^2.8.3",
+    "@types/autosuggest-highlight": "^3.2.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.26",
