--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_API=/gql/schema
+REACT_APP_GOOGLE_MAPS_ID=7f6f32d2bee3f4d
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAo_4qOKdV2h7BKMiMD1cl5LzjXHiRQalA
