--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+# access_log  /var/log/nginx/host.access.log  main;
+error_log   /var/log/nginx/error.log notice;
+pid         /var/run/nginx.pid;
 
 
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -24,8 +24,25 @@ http {
     #tcp_nopush     on;
 
     keepalive_timeout  65;
+    gzip  on;
 
-    #gzip  on;
+    server {
+        listen       80;
+        listen  [::]:80;
+        server_name  *.skyrealm.ai;
 
-    include /etc/nginx/conf.d/*.conf;
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri /index.html;
+        }
+
+        #error_page  404              /404.html;
+
+        # redirect server error pages to the static page /50x.html
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
 }
