--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@graphql-codegen/cli": "^2.15.0",
     "@graphql-codegen/client-preset": "^1.2.1",
     "@graphql-codegen/typescript": "^2.8.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/node": "^18.11.11",
