--- a/package.json
+++ b/package.json
@@ -2,75 +2,58 @@
   "name": "skyrealm-web",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "npm-run-all --parallel codegen:watch dev",
+    "dev": "next dev",
+    "build": "next build",
+    "serve": "next start",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "codegen": "graphql-codegen",
+    "codegen:watch": "graphql-codegen -w"
+  },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
-    "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
+    "@next/font": "^13.0.6",
     "@react-google-maps/api": "^2.17.0",
+    "@types/node": "18.11.11",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "autosuggest-highlight": "^3.3.4",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "formik": "^2.2.9",
     "graphql-request": "^5.0.0",
+    "next": "13.0.6",
     "notistack": "^2.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
-    "typescript": "^4.8.4",
-    "web-vitals": "^3.1.0",
+    "typescript": "4.9.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.15.0",
     "@graphql-codegen/client-preset": "^1.2.1",
     "@graphql-codegen/typescript": "^2.8.3",
+    "@svgr/webpack": "^6.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/dotenv-flow": "^3.2.0",
-    "@types/node": "^18.11.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
     "dotenv-flow": "^3.2.0",
-    "eslint": "^8.29.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "serve": "^14.1.2"
-  },
-  "scripts": {
-    "start": "npm-run-all --parallel codegen:watch dev",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "codegen": "graphql-codegen",
-    "codegen:watch": "graphql-codegen -w",
-    "serve": "serve -s build"
+    "prettier": "2.8.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,md}": "prettier --write"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
