--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm-run-all --parallel codegen:watch dev",
     "dev": "next dev",
+    "dev:watch": "npm-run-all --parallel dev codegen:watch",
     "build": "next build",
-    "serve": "next start",
+    "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
     "codegen": "graphql-codegen",
