--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/autosuggest-highlight": "^3.2.0",
     "@types/dotenv-flow": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
     "dotenv-flow": "^3.2.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.0"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx,css,md}": "prettier --write"
   }
 }
