--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.0"
+    "prettier": "2.8.0",
+    "sass": "^1.56.2"
   }
 }
