--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@next/font": "^13.0.6",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
     "@react-google-maps/api": "^2.17.0",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
