--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-query": "^3.39.2",
     "react-use": "^17.4.0",
     "typescript": "4.9.4",
+    "utility-types": "^3.10.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
