--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "^13.0.7",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
     "@react-google-maps/api": "^2.17.1",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
@@ -32,6 +33,7 @@
     "formik": "^2.2.9",
     "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.0.7",
     "notistack": "^2.0.8",
     "react": "18.2.0",
