--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@react-google-maps/api": "^2.17.1",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
