--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-query": "^3.39.2",
     "react-use": "^17.4.0",
     "typescript": "4.9.4",
+    "uniqolor": "^1.1.0",
+    "universal-cookie": "^4.0.4",
     "utility-types": "^3.10.0",
     "yup": "^0.32.11"
   },
