--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BACKEND_API=https://dev.skyrealm.ai/gql/schema
+NEXT_PUBLIC_BACKEND_API=/gql/schema
 NEXT_PUBLIC_GOOGLE_MAPS_ID=7f6f32d2bee3f4d
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAo_4qOKdV2h7BKMiMD1cl5LzjXHiRQalA
