--- a/deploy/prod.values.yaml
+++ b/deploy/prod.values.yaml
@@ -8,4 +8,4 @@ ingress:
           pathType: ImplementationSpecific
 
 env:
-  node_env: production
+  NEXT_PUBLIC_BACKEND_API: https://www.skyrealm.ai/gql/schema
