--- a/deploy/dev.values.yaml
+++ b/deploy/dev.values.yaml
@@ -7,5 +7,5 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
 
-env:
+args:
   NEXT_PUBLIC_BACKEND_API: https://dev.skyrealm.ai/gql/schema
