--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:watch": "npm-run-all --parallel dev codegen:watch",
     "build": "next build",
+    "build:start": "npm-run-all build start",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
