--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
