working on broker profile page

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:watch": "npm-run-all --parallel dev codegen:watch",
     "build": "next build",
     "build:start": "npm-run-all build start",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
@@ -38,6 +39,7 @@
     "moment": "^2.29.4",
     "next": "13.1.1",
     "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.44",
     "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
